--- a/wake-word-voice-assistant/esp32-s3-box-3.yaml
+++ b/wake-word-voice-assistant/esp32-s3-box-3.yaml
@@ -1,4 +1,19 @@
 ---
+# SECOND ESP S3 BOX 3
+#------------------------------------------------------------------------------------#
+#     PIN Schematics                                                                 #
+#                                                                                    #
+#       GPIO-00 MCU-BOOT                                                             #
+#       GPIO-01 Speaker Mute-Status                                                  #
+#       GPIO-02 I2S MCLK                                                             #
+#       GPIO-03 Touch-Screen TT21100 Interrupt Pin                                   #
+#       GPIO-04 ILI92xxx Display DC-Pin (SPI: CLK-Pin)                               #
+#       GPIO-05 ILI92xxx Display CS-Pin (SPI: MOSI-Pin)                              #
+#       GPIO-06 ILI92xxx Display SDA                                                 #
+#       GPIO-07 ILI92xxx Display SCK                                                 #
+#       GPIO-17 I2S_SCLK                                                             #
+#       GPIO-40 I2C_SCL (Temp & Hum) -- SENSOR v1.1 [AHT30]                          #
+#       GPIO-41 I2C_SDA (Temp & Hum) -- SENSOR v1.1 [AHT30]                          #
 substitutions:
   name: esp32-s3-box-3
   friendly_name: ESP32 S3 Box 3
@@ -52,9 +67,9 @@ esphome:
           then:
             - lambda: id(init_in_progress) = false;
             - script.execute: draw_display
-      - output.set_level:
-        id: speaker_volume
-        level: 0.95  # 85% volume
+      - lambda: |-
+          auto volume_component = id(speaker_volume);
+          volume_component->set_volume(0.9);
 
 esp32:
   board: esp32s3box
